<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abdelmun3m.popularmovies.MainActivity"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/search_Layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            >
            <SearchView
                android:id="@+id/search"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:queryHint="Search Movies"
                android:iconifiedByDefault="false"
                android:focusable="false"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/tv_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:id="@+id/tv_favorit_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favorite"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/frame"
            android:layout_margin="10dp"
            >
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_moviesView"
                android:visibility="visible"
                android:layout_gravity="center"
                >

            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ErrorMessage"
                android:text="@string/error_Message"
                android:visibility="invisible"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
            <ProgressBar
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:id="@+id/pb_loading"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </FrameLayout>
        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/movie_green"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/movie_api_library_logo"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
